@@ -1,3 +1,14 @@
+2015-01-16  Anders Carlsson  <andersca@apple.com>
+
+        Log unhandled messages in the web process
+        https://bugs.webkit.org/show_bug.cgi?id=140549
+
+        Reviewed by Andreas Kling.
+
+        * WebProcess/WebProcess.cpp:
+        (WebKit::WebProcess::didReceiveSyncMessage):
+        (WebKit::WebProcess::didReceiveMessage):
+
 2015-01-16  Shivakumar JM  <shiva.jm@samsung.com>
 
         Fix build warning in WebKit2/UIProcess module.
